--- a/lib/shared/localization/arb/app_en.arb
+++ b/lib/shared/localization/arb/app_en.arb
@@ -699,5 +699,6 @@
   "criminal_certificate": "Criminal certificate",
   "car_img": "Car Photo",
     "distance": "Distance",
-  "meter":"Meter"
+  "meter":"Meter",
+
 }
