--- a/lib/shared/localization/arb/app_ar.arb
+++ b/lib/shared/localization/arb/app_ar.arb
@@ -701,6 +701,6 @@
   "criminal_certificate": "الشهادة الجنائية",
   "car_img": "صوره المركبة",
   "distance": "المسافة",
-  "meter":"متر",
+  "meter":"متر"
 
 }
