--- a/lib/shared/localization/arb/app_ar.arb
+++ b/lib/shared/localization/arb/app_ar.arb
@@ -317,6 +317,7 @@
   "get_fare": "ثمن الرحله",
   "offer_your_fare": "اعرض ثمن",
   "comment_and_wishes": "اكتب ملاحظاتك",
+  "comment": "التعليق",
   "find_a_driver": "بحث عن كابتن",
   "confirm": "اتمام",
   "pay": "دفع",
