--- a/lib/shared/localization/arb/app_ar.arb
+++ b/lib/shared/localization/arb/app_ar.arb
@@ -664,7 +664,7 @@
   "per": "لمدة",
   "failed": "عمليه فاشله",
   "success": "عمليه ناجحه",
-  "no_order": "لا توجد طلبات",
+  "no_order": "لا يوجد طلبات مخصصه لك",
   "no_spcial_order": "لا توجد طلبات خاصه",
   "tags": "عنوان جانبي",
   "social": "وسائل التواصل",
